--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
     min-height: 50vh;
     background-color: rgb(102, 120, 95);
     border-radius: 10% auto;
+    border-radius: 7px;
     margin: 0% auto;
     padding: 20px;
 }
@@ -142,16 +143,33 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    width: 93%;
+    width: 100%;
     margin: 0 auto;
-    background-color: red;
     position: absolute;
+    left: 0;
     bottom: 0px;
+    border-top: 1px solid white;
+    color: white;
 }
 
 .item-count, 
 .statuses-filter, 
 .clear-button {
-    background-color: white;
     width: 30%;
+}
+
+.statuses-filter {
+    justify-content: space-evenly;
+}
+
+
+.item-count:hover, 
+.clear-button:hover {
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.statuses-filter:hover > div:hover{
+    cursor: pointer;
+    font-weight: bold;
 }
